// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`People reducer people actions should handle fill action 1`] = `
Object {
  "count": 82,
  "data": Array [
    Object {
      "birth_year": "64BBY",
      "created": "2014-12-10T16:26:56.138000Z",
      "edited": "2014-12-20T21:17:50.330000Z",
      "eye_color": "blue",
      "films": Array [
        "http://swapi.dev/api/films/1/",
        "http://swapi.dev/api/films/6/",
      ],
      "gender": "male",
      "hair_color": "auburn, grey",
      "height": "180",
      "homeworld": "http://swapi.dev/api/planets/21/",
      "id": 1,
      "mass": "unknown",
      "name": "Wilhuff Tarkin",
      "skin_color": "fair",
      "species": Array [],
      "starships": Array [],
      "url": "http://swapi.dev/api/people/12/",
      "vehicles": Array [],
    },
  ],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer people actions should handle set fetching error message 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": "We have an error",
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer people actions should handle start fetching action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": true,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer people actions should handle stop fetching action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer people actions should return initial state by default 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer person actions should handle clear action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer person actions should handle fill action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": Object {
    "birth_year": "19BBY",
    "created": "2014-12-09T13:50:51.644000Z",
    "edited": "2014-12-20T21:17:56.891000Z",
    "eye_color": "blue",
    "films": Array [
      "http://swapi.dev/api/films/1/",
      "http://swapi.dev/api/films/2/",
      "http://swapi.dev/api/films/3/",
      "http://swapi.dev/api/films/6/",
    ],
    "gender": "male",
    "hair_color": "blond",
    "height": "172",
    "homeworld": "http://swapi.dev/api/planets/1/",
    "mass": "77",
    "name": "Luke Skywalker",
    "skin_color": "fair",
    "species": Array [],
    "starships": Array [
      "http://swapi.dev/api/starships/12/",
      "http://swapi.dev/api/starships/22/",
    ],
    "url": "http://swapi.dev/api/people/1/",
    "vehicles": Array [
      "http://swapi.dev/api/vehicles/14/",
      "http://swapi.dev/api/vehicles/30/",
    ],
  },
  "personError": null,
}
`;

exports[`People reducer person actions should handle set fetching error message 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": "We have an error",
}
`;

exports[`People reducer person actions should handle start fetching action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": true,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer person actions should handle stop fetching action 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;

exports[`People reducer person actions should return initial state by default 1`] = `
Object {
  "count": 0,
  "data": Array [],
  "error": null,
  "isFetching": false,
  "isFetchingPerson": false,
  "person": null,
  "personError": null,
}
`;
